--- a/content/ordered.adoc
+++ b/content/ordered.adoc
@@ -5,7 +5,7 @@ title: Vielen Dank für Ihre Bestellung!
 
 Sie bekommen nun eine Bestellbestätigung an die von Ihnen angegebene E-Mail zugeschickt.
 Der Auftrag wird nun so schnell als möglich bearbeitet.
-Für weitere Fragen wenden Sie sich bitte an office@markus-nentwich.at.
+Für weitere Fragen wenden Sie sich bitte an kontakt@markus-nentwich.at.
 
 Haben Sie sich schon weiter im Shop umgesehen?
 Ich bin überzeugt davon, dass Sie noch weitere meiner Werke interessieren wird!
