--- a/content/_index.adoc
+++ b/content/_index.adoc
@@ -4,5 +4,9 @@ layout: single
 ---
 
 Ich heiße Sie herzlich auf meiner Website willkommen!
-Mein Name ist Markus Nentwich und biete verschiedene Leistungen an.
-Alle Werke, welche ich zum Verkauf anbiete können Sie unter "`Noten`" auffinden.
+Hier sehen Sie meine aktuellen Kompositionen und Arrangements.
+Auch können Sie mich für Workshops, Unterricht, Ausftragswerke o.a. kontaktieren.
+
+
+Mit freundlichen Grüßen, +
+Markus Nentwich
