added spam hint

--- a/content/ordered.adoc
+++ b/content/ordered.adoc
@@ -8,6 +8,9 @@ Sie bekommen nun eine Bestellbestätigung an die von Ihnen angegebene E-Mail zug
 Der Auftrag wird nun so schnell als möglich bearbeitet.
 Für weitere Fragen wenden Sie sich bitte an kontakt@markus-nentwich.at.
 
+Möglicherweise landet die Bestellbestätigung in Ihrem "`Spam`" Ordner.
+Sehen Sie deshalb auch dort nach!
+
 Haben Sie sich schon weiter im Shop umgesehen?
 Ich bin davon überzeugt, dass Sie noch weitere meiner Werke interessieren wird!
 
