changed contact adoc

--- a/content/contact.adoc
+++ b/content/contact.adoc
@@ -5,6 +5,6 @@ email: kontakt@markus-nentwich.at
 
 Markus Nentwich +
 Vereinsgasse 25/14 +
-A -- 1020 Wien +
+A-1020 Wien +
 Tel.: +43699 10329882 +
 E-Mail.: kontakt@markus-nentwich.at
