changed about to biografie

--- a/content/biografie.adoc
+++ b/content/biografie.adoc
@@ -1,7 +1,8 @@
 ---
-title: Über mich
+title: Biografie
 ---
 
+[text-justify]
 Seinen ersten Trompeten- und Posaunenunterricht erhielt Markus mit fünf Jahren in der örtlichen Musikschule bei seinem Vater Felix. Nach einigen Jahren bei Mag. Reinhard Stöckl und einem Jahr bei Thomas Zsivkovits begann er 2010 den Vorbereitungslehrgang an der Universität für Musik und darstellende Kunst Wien bei Prof. Otmar Gaiswinkler.
 
 Nach der Matura (Abitur) im Musikgymnasium Wien begann der Präsenzdienst bei der Gardemusik Wien, wo sich auch die Powerkryner gründeten, bei denen Markus Gründungsmitglied ist.
